<?xml version="1.0"?>
<package>
  <name>urdf2inventor</name>
  <version>1.0.0</version>
  <description>A conversion from URDF 2 Inventor including a simple viewer.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD (3-clause)</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/urdf2inventor</url> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>baselib_binding</build_depend>
  <build_depend>urdf_traverser</build_depend>
  <build_depend>urdf_transform</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>baselib_binding</run_depend>
  <run_depend>urdf_traverser</run_depend>
  <run_depend>urdf_transform</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>urdf</run_depend>

  <!-- System dependencies: -->
  <build_depend>libsoqt4-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libcoin80-dev</build_depend>
  <build_depend>assimp-dev</build_depend>
  
  <run_depend>libsoqt4-dev</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libcoin80-dev</run_depend>
  <run_depend>assimp-dev</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
