<?xml version="1.0"?>
<package>
  <name>urdf_processing_tools</name>
  <version>1.0.0</version>
  <description>A collection of tools to traverse, view and manipulate a URDF</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD (3-clause)</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/urdf_processing_tools</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf_traverser</run_depend>
  <run_depend>urdf_transform</run_depend>
  <run_depend>urdf2inventor</run_depend>
  <run_depend>urdf_viewer</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/> 
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
